--- a/style.css
+++ b/style.css
@@ -434,7 +434,18 @@ width: 100%;
   font-weight: 700;
 }
 
-
+.featured{
+  display: flex;flex-direction: row;justify-content: space-evenly;flex-wrap: wrap;
+}
+.featured>div{
+  width: 30%;margin: 10px;border: 1px solid black;border-radius: 10px;
+}
+.featured>div>div{
+  background-color: #F2EFEF;padding: 20px;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;
+}
+.featured img{
+  width: 200px;height: 200px;margin-left: 50px;padding: 20px;
+}
 #st {
   background-color: #E1E2E7;
 }
@@ -487,6 +498,12 @@ width: 100%;
 }
 
 @media only screen and (max-width: 900px){
+  .featured{
+  flex-direction: column;justify-content: center;align-items: center;
+}
+.featured>div{
+ width: 80%;margin: 10px;
+}
      #snap{
  flex-direction: column;
   }
